--- a/HTML/Produkte & Dienstleistungen.html
+++ b/HTML/Produkte & Dienstleistungen.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="../Styles/style.css">
     <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/fontA.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <title>Produkte & Dienstleistungen</title>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
@@ -19,13 +20,19 @@
         <a href="index.html" class="navigation-item">Startseite</a>
         <a href="Über uns.html" class="navigation-item">Über uns</a>
         <a href="#" class="navigation-item">Produkte & Dienstleistungen</a>
-        <a href="Produktion.html" class="navigation-item">Produktion</a>
         <a href="Team.html" class="navigation-item">Team</a>
         <a href="Kontakt.html" class="navigation-item">Kontakt</a>
         <img style="margin-left: auto;" src="../Images/Logo.png">
     </div>
-
     <div class="text">
+        <h1>Herstellung & Design</h1>
+        <hr>
+        <p>Die Herstellung unserer Lampen erfolgt in unserer Lampenfabrik in Rümlang, ZH. Bei unseren Produkten können sie auf höchste Schweizer Qualität vertrauen! </p>
+        <br>
+        <p>Wir verwenden ausschliesslich Ressourcen aus Nachhaltigem Abbau welche wir zu fairen Konditionen einkaufen. Mit unseren internationalen Partnern verbindet uns eine langjährige Zusammenarbeit, welche von beiden Seiten geschätzt wird. </p>
+        <br>
+        <p>Unsere preisgekrönten Designer leben und arbeiten in diversen Städten verteilt um die ganze Welt. Aufgrund der verschiedenen kulturellen Eindrücke, welche jeder Einzelne ins Team bringt sind unsere Designs weltweit einzigartig! </p>
+
         <h1 class="">Unsere Produkte</h1>
         <hr>
 
