--- a/HTML/Über uns.html
+++ b/HTML/Über uns.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="../Styles/style.css">
     <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/fontA.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet'>
     <title>Produktion</title>
@@ -18,13 +19,12 @@
         <a href="index.html" class="navigation-item">Startseite</a>
         <a href="Über uns.html" class="navigation-item">Über uns</a>
         <a href="Produkte & Dienstleistungen.html" class="navigation-item">Produkte & Dienstleistungen</a>
-        <a href="#" class="navigation-item">Produktion</a>
         <a href="Team.html" class="navigation-item">Team</a>
         <a href="Kontakt.html" class="navigation-item">Kontakt</a>
         <img style="margin-left: auto;" src="../Images/Logo.png">
     </div>
     <div class="center">
-        <div class="leitbildtxt"><h1>&Uuml;ber Uns</h1>
+        <div class="leitbildtxt"><h1>&Uuml;ber Uns</h1> <hr> <br>
                 Die Schuber Lampen AG widmet sich als Teil der Schuber Holding seit 10 Jahren der Herstellung von modischen Lampen f&uuml;r das bewusste Wohnen. 
                 Zusammen mit internationalen Spezialisten entwickeln wir zeitlose Designs verbunden mit h&ouml;chstem Komfort. F&uuml;r ein einmaliges Lichterlebnis! 
         </div>
@@ -48,7 +48,63 @@
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod temporLorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor
             </div>
         </div>
-        
+
+        <div class="leitbildtxt"><h1>Schuber Holding</h1> <hr> <br>
+            Die Schuber Holding nimmt sich seit mehr als 50 Jahren dem Ziel an Wohnen so komfortable und praktikabel zu gestalten. Im Laufe der Jahre entstanden aus der urspr&Uuml;nglichen Tischlerei mehrere einzeln gef&Uuml;hrte Unternehmen, welche sich auf ein jeweiliges Kerngebiet des Wohnens spezialisieren.<br>
+            Durch die nahe Zusammenarbeit und dem hohen Know How Austausch bieten wir auch ganzheitliche Einrichtungsl&ouml;sungen an, alles aus einer Hand! 
+        </div>
+        <div class="Schubercontainer">
+            <div class="SchuberItem">
+                <img class="SchuberItemImg" src="../Images/Samuel.jpg" alt="Denovo">
+                <div class="SchuberItemText"> 
+                    <a href="www.schuber-lampen.ch">
+                        <h1>Schuber Lampen</h1>
+                    </a>
+                    <hr>
+                    Herstellung und Vertrieb von Lampen
+                </div>
+            </div>
+            <div class="SchuberItem">
+                <img class="SchuberItemImg" src="../Images/Schrank.jpg" alt="Schuber Schrank">
+                <div class="SchuberItemText"> 
+                    <a href="www.schuber-schrank.ch">
+                        <h1 >Schuber Aufbewahrung</h1>
+                    </a>
+                    <hr>
+                    Aufbewahrungssysteme jeder Art 
+                </div>
+            </div>
+            <div class="SchuberItem">
+                <img class="SchuberItemImg" src="../Images/Kitchen.jpg" alt="Schuber Kueche">
+                <div class="SchuberItemText"> 
+                    <a href="www.schuber.ch/kuechen">
+                        <h1>Schuber Küchenbau </h1>
+                    </a>
+                    <hr>
+                    Individuelle Küchen & Küchenzubehör
+                </div>
+            </div>
+            <div class="SchuberItem">
+                <img class="SchuberItemImg" src="../Images/Sleeping_room.jpg" alt="Schuber Schlaf">
+                <div class="SchuberItemText"> 
+                    <a href="www.schuber.ch/schlaf ">
+                        <h1>Schuber Schlaf</h1>
+                    </a>
+                    <hr>
+                    Alles für einen gesunden Schlaf 
+                </div>
+            </div>
+            <div class="SchuberItem" style="margin:auto;">
+                <img class="SchuberItemImg" src="../Images/Garden.jpg" alt="Schuber Garten">
+                <div class="SchuberItemText"> 
+                    <a href="www.schuber.ch/garten">
+                        <h1>Schuber Garten</h1>
+                    </a>
+                    <hr>
+                    Für einen Garten der sich sehen lässt!
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
