--- a/HTML/Team.html
+++ b/HTML/Team.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="../Styles/style.css">
     <script src="../Scripts/script.js"></script>
+    <script src="../Scripts/fontA.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <title>Produkte & Dienstleistungen</title>
 </head>
@@ -18,7 +19,6 @@
         <a href="index.html" class="navigation-item">Startseite</a>
         <a href="Über uns.html" class="navigation-item">Über uns</a>
         <a href="Produkte & Dienstleistungen.html" class="navigation-item">Produkte & Dienstleistungen</a>
-        <a href="Produktion.html" class="navigation-item">Produktion</a>
         <a href="#" class="navigation-item">Team</a>
         <a href="Kontakt.html" class="navigation-item">Kontakt</a>
         <img style="margin-left: auto;" src="../Images/Logo.png">
